--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,7 +36,7 @@
       <div class="posts w-full flex gap-1 py-2 mt-5 flex-wrap">
         <% if(user.posts.length>0){ %>
           <% user.posts.reverse().forEach(function(post){ %>
-            <div class="post w-[32.5%] h-32 bg-sky-100">
+            <div class="post w-[32.5%] h-32 bg-sky-100 overflow-hidden">
               <img class="w-full h-full object-cover" src="/images/uploads/<%= post.picture %>" alt="">
             </div>
           <% }) %>
